Launcher: restart with Java version-specific options